--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -599,7 +599,16 @@
 					"js/utils/events.js",
 					"js/utils/CloudFileUtil.js",
 					"js/cloud/AndroidFileSystem.js",
-					"js/utils/UploadHeadImage.js"
+					"js/utils/UploadHeadImage.js",
+					"css/utils/pullToRefresh.css",
+					"js/utils/cryption.js",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"css/utils/preview.css",
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/quan/studentpersonalimge.html"
@@ -2061,7 +2070,8 @@
 					"image/mine/new-message.png",
 					"image/mine/about.png",
 					"image/mine/my-space.png",
-					"image/mine/my-points.png"
+					"image/mine/my-points.png",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/mine/approval-apply.html",
