1、修改邀请专家列表界面逻辑 2、展现点击头像跳转界面 3、学生查看已提交作业详情 用openwindow方式

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1442,7 +1442,8 @@
 					"fonts/fangzheng.ttf"
 				],
 				"refer": [
-					"html/cloud/keeprecord_callorrecord_main.html"
+					"html/cloud/keeprecord_callorrecord_main.html",
+					"html/cloud/keeprecord_history_0.html"
 				],
 				"priority": 0
 			},
@@ -1860,7 +1861,8 @@
 					"html/qiuzhi/qiuzhi_home.html",
 					"html/sciedu/sciedu_home.html",
 					"html/show/show_home_1.html",
-					"html/qiuzhi/expert-detail.html"
+					"html/qiuzhi/expert-detail.html",
+					"html/qiuzhi/qiuzhi-questionSearch.html"
 				],
 				"priority": 0
 			},
@@ -2237,9 +2239,31 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"js/mui.pullToRefresh.js",
+					"css/utils/pullToRefresh.css",
+					"image/cloud/notes_bg2.jpg",
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/preview.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.zoom.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"js/mui.previewimage.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/cloud/app_notes_create.html"
+				],
 				"priority": 0
 			},
 			"html/homework/workdetail-tea.html": {
@@ -3622,6 +3646,59 @@
 					"js/utils/RSAEncrypt.js",
 					"image/utils/default_personalimage.png",
 					"css/iconfont/iconfont.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/qiuzhi/qiuzhi-questionSearch.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"js/publicQiuzhiProtocol.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"css/qiuzhi/qiuzhi-questionSearch.css",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/keeprecord_history_0.html": {
+				"resources": [
+					"js/mui.pullToRefresh.js",
+					"js/mui.zoom.js",
+					"css/utils/pullToRefresh.css",
+					"js/mui.pullToRefresh.material.js",
+					"js/mui.previewimage.js",
+					"css/utils/preview.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/app_notes_create.html": {
+				"resources": [
+					"css/iconfont/iconfont.css",
+					"js/utils/cryption.js",
+					"js/utils/CloudFileUtil.js",
+					"js/qiniu/qiniu.js",
+					"fonts/iconfont.ttf",
+					"js/utils/MultiMedia.js",
+					"css/utils/MultiMedia.css",
+					"js/cloud/AndroidFileSystem.js"
 				],
 				"refer": [],
 				"priority": 0
