申请入群 备注显示

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -997,7 +997,8 @@
 					"image/homework/submitted.png",
 					"css/homework/subjects-icon.css",
 					"image/homework/no-comment.png",
-					"image/homework/commented.png"
+					"image/homework/commented.png",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/homework/workdetail-tea.html",
