--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -608,7 +608,8 @@
 					"js/mui.pullToRefresh.material.js",
 					"css/utils/preview.css",
 					"js/libs/crypto-js/crypto-js.js",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"js/utils/compress.js"
 				],
 				"refer": [
 					"html/quan/studentpersonalimge.html"
@@ -1222,7 +1223,8 @@
 					"js/libs/crypto-js/core.js",
 					"js/libs/CryptoJS/components/mode-ecb-min.js",
 					"js/libs/CryptoJS/rollups/tripledes.js",
-					"js/utils/compress.js"
+					"js/utils/compress.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/homework/homework-commented.html"
@@ -1503,7 +1505,8 @@
 				],
 				"refer": [
 					"html/quan/zone_main.html",
-					"html/quan/reply-aboutMe.html"
+					"html/quan/reply-aboutMe.html",
+					"html/quan/space-detail.html"
 				],
 				"priority": 0
 			},
@@ -3715,6 +3718,39 @@
 					"js/utils/MultiMedia.js",
 					"css/utils/MultiMedia.css",
 					"js/cloud/AndroidFileSystem.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/space-detail.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"css/icons-extra.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/mui.lazyload.img.js",
+					"css/iconfont/iconfont.css",
+					"js/mui.zoom.js",
+					"js/mui.min.js",
+					"js/mui.previewimage.js",
+					"js/quan/dynamiclistitem.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/storageKeyName.js",
+					"js/libs/crypto-js/require.js",
+					"js/mui.lazyload.js",
+					"css/utils/common.css",
+					"css/utils/preview.css",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicProtocol.js",
+					"js/utils/native.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/libs/RSA/RSA.js",
+					"js/utils/RSAEncrypt.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
