1.点击与我相关内容 进入详情 2.点击班级头像 安卓手机不显示内容 3.动态详情评论 刷新界面

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3750,7 +3750,10 @@
 					"css/mui.min.css",
 					"js/libs/RSA/RSA.js",
 					"js/utils/RSAEncrypt.js",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"image/utils/default_personalimage.png",
+					"image/dynamic/icon_praise_small.png",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
