--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -840,7 +840,8 @@
 					"html/quan/class_space.html",
 					"html/quan/studentdynamic_main.html",
 					"html/mine/qun_manage.html",
-					"html/mine/qun_manage_main.html"
+					"html/mine/qun_manage_main.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
