[教宝云-安卓] 建议与我相关里面的动态 只显示前三行，多于... 显示

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -490,7 +490,10 @@
 					"css/utils/preview.css",
 					"js/mui.lazyload.img.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/quan/space-detail.html",
+					"html/show/add-comment.html"
+				],
 				"priority": 0
 			},
 			"html/quan/class_space.html": {
