0005200: 作业--点击学生作业文字被挡住

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3427,7 +3427,10 @@
 					"css/utils/common.css",
 					"js/libs/crypto-js/crypto-js.js",
 					"/image/utils/default_load_2.gif",
-					"js/storageKeyName.js"
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/publicProtocol.js",
+					"js/mui.min.js"
 				],
 				"refer": [],
 				"priority": 0
