0005261: 作业评论页面修改

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2440,7 +2440,9 @@
 					"js/utils/CloudFileUtil.js",
 					"js/qiniu/qiniu.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/homework/homework-commented.html"
+				],
 				"priority": 0
 			},
 			"html/homework/homeworkRecord-sub.html": {
