[教宝云-安卓] 新消息申请加入的群名称过长时，显示不全0326

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3131,7 +3131,8 @@
 					"js/publicProtocol.js",
 					"js/mui.min.js",
 					"fonts/mui.ttf",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [],
 				"priority": 0
