--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1589,7 +1589,9 @@
 					"css/utils/preview.css",
 					"js/utils/cryption.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/cloud/storage_show_imge.html"
+				],
 				"priority": 0
 			},
 			"html/mine/group-info.html": {
@@ -3825,6 +3827,25 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/libs/crypto-js/crypto-js.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/cloud/storage_show_imge.html": {
+				"resources": [
+					"js/utils/cryption.js",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"fonts/mui.ttf",
+					"css/utils/common.css",
+					"css/utils/preview.css",
+					"js/cloud/mui.previewimage.js",
+					"js/mui.zoom.js",
+					"js/mui.min.js",
+					"fonts/fangzheng.ttf",
+					"js/utils/CloudFileUtil.js",
+					"css/mui.min.css",
+					"js/qiniu/qiniu.js"
 				],
 				"refer": [],
 				"priority": 0
