求知回答问题

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -492,7 +492,8 @@
 				],
 				"refer": [
 					"html/quan/space-detail.html",
-					"html/show/add-comment.html"
+					"html/show/add-comment.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
