0005363: 班级空间修改方案如图所示

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1787,7 +1787,8 @@
 				],
 				"refer": [
 					"html/register/modify_password.html",
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/register/register_phoneNumber.html"
 				],
 				"priority": 0
 			},
