--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2751,8 +2751,7 @@
 					"fonts/mui.ttf",
 					"image/qiuzhi/add-question.png.png",
 					"js/mui.lazyload.js",
-					"js/mui.lazyload.img.js",
-					"image/utils/default_load_2.gif"
+					"js/mui.lazyload.img.js"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-question.html",
