--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1672,7 +1672,8 @@
 					"js/utils/RSAEncrypt.js",
 					"fonts/fangzheng.ttf",
 					"js/utils/cryption.js",
-					"js/utils/compress.js"
+					"js/utils/compress.js",
+					"js/utils/MultiMedia.js"
 				],
 				"refer": [
 					"html/mine/qun_manage_info_change_post.html"
@@ -2151,7 +2152,13 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/utils/cryption.js",
+					"js/cloud/AndroidFileSystem.js",
+					"js/utils/UploadHeadImage.js",
+					"fonts/fangzheng.ttf",
+					"js/utils/CloudFileUtil.js",
+					"js/utils/compress.js"
 				],
 				"refer": [
 					"html/mine/qun_manage_info_change_post.html"
@@ -3362,7 +3369,8 @@
 					"html/mine/qun_manage_invite.html",
 					"html/mine/qun_data_create.html",
 					"html/mine/qun_data_details.html",
-					"html/mine/qun_manage_invite_a.html"
+					"html/mine/qun_manage_invite_a.html",
+					"html/mine/qun_manage_info_change.html"
 				],
 				"priority": 0
 			},
