--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -489,7 +489,8 @@
 					"js/mui.lazyload.js",
 					"css/utils/preview.css",
 					"js/mui.lazyload.img.js",
-					"image/dynamic/praise.png"
+					"image/dynamic/praise.png",
+					"css/show/show.css"
 				],
 				"refer": [
 					"html/quan/space-detail.html",
@@ -1404,7 +1405,9 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"css/iconfont/iconfont.css"
+					"css/iconfont/iconfont.css",
+					"js/utils/self-adaptive-input.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -3497,7 +3500,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"/image/utils/default_load_2_1.gif"
 				],
 				"refer": [
 					"html/utils/customizeCity.html",
