--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2632,7 +2632,9 @@
 					"fonts/iconfont.ttf",
 					"fonts/fangzheng.ttf"
 				],
-				"refer": [],
+				"refer": [
+					"html/homework/change-comment.html"
+				],
 				"priority": 0
 			},
 			"html/cloud/record_student_main.html": {
@@ -4078,6 +4080,30 @@
 					"js/utils/events.js",
 					"css/mui.min.css",
 					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/homework/change-comment.html": {
+				"resources": [
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"js/publicHomeworkProtocol.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
