--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4108,6 +4108,14 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"html/quan/leaveNew.html": {
+				"resources": [
+					"css/quan/about-me.css",
+					"css/utils/bubble.css"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
