0005546: 点击班级空间的谁预览过拉至底部点击谁点赞过界面，谁点赞界面下面空两行

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2469,7 +2469,8 @@
 					"js/qiniu/qiniu.js",
 					"fonts/fangzheng.ttf",
 					"js/utils/events.js",
-					"js/utils/playutil.js"
+					"js/utils/playutil.js",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
