--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3515,7 +3515,9 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/RSAEncrypt.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/qiuzhi/qiuzhi-newQ.html"
+				],
 				"priority": 0
 			},
 			"html/qiuzhi/experts_sub.html": {
@@ -3660,9 +3662,15 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"image/qiuzhi/channel-edu.png",
+					"image/qiuzhi/channel-science.png",
+					"image/qiuzhi/channel-health.png",
+					"image/qiuzhi/channel-food.png"
 				],
-				"refer": [],
+				"refer": [
+					"html/qiuzhi/qiuzhi-question.html"
+				],
 				"priority": 0
 			},
 			"html/qiuzhi/AttentionPersons.html": {
@@ -3860,9 +3868,14 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"fonts/iconfont.ttf",
+					"fonts/fangzheng.ttf",
+					"js/libs/crypto-js/crypto-js.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/qiuzhi/qiuzhi-question.html"
+				],
 				"priority": 0
 			},
 			"html/cloud/keeprecord_history_0.html": {
@@ -4135,7 +4148,28 @@
 			"html/quan/leaveNew.html": {
 				"resources": [
 					"css/quan/about-me.css",
-					"css/utils/bubble.css"
+					"css/utils/bubble.css",
+					"js/mui.pullToRefresh.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"fonts/iconfont.ttf",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
