--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-    "launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/index/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -844,8 +844,7 @@
 					"fonts/fangzheng.ttf",
 					"image/quan/share.png",
 					"image/quan/aboutme.png",
-					"image/quan/Scan.png",
-					"js/qiuzhi/delContent_pop.js"
+					"image/quan/Scan.png"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -864,8 +863,7 @@
 					"html/mine/qun_manage_main.html",
 					"html/quan/zone_main.html",
 					"html/mine/qun_manage_1.html",
-					"html/mine/ReadQRCode.html",
-					"html/quan/pub-dynamic.html"
+					"html/mine/ReadQRCode.html"
 				],
 				"priority": 0
 			},
