--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -844,7 +844,8 @@
 					"fonts/fangzheng.ttf",
 					"image/quan/share.png",
 					"image/quan/aboutme.png",
-					"image/quan/Scan.png"
+					"image/quan/Scan.png",
+					"js/qiuzhi/delContent_pop.js"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
