--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-    "launch_path": "html/index/index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/register/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -2825,8 +2825,7 @@
 					"html/qiuzhi/qiuzhi-answerDetail.html",
 					"html/qiuzhi/qiuzhi-newQ.html",
 					"html/qiuzhi/expert-detail.html",
-					"html/qiuzhi/experts_main.html",
-					"html/register/login.html"
+					"html/qiuzhi/experts_main.html"
 				],
 				"priority": 0
 			},
