--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1823,7 +1823,8 @@
 				],
 				"refer": [
 					"html/register/modify_password.html",
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/index/index.html"
 				],
 				"priority": 0
 			},
